--- a/AndroidDev/app/src/main/res/layout/activity_main.xml
+++ b/AndroidDev/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/DeathButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello DEATH."
@@ -14,5 +15,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/MyFirstButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="BIGBUTTON"
+        tools:layout_editor_absoluteX="155dp"
+        tools:layout_editor_absoluteY="185dp"
+        android:onClick="onclick_clicky"/>
 
 </android.support.constraint.ConstraintLayout>
