Working on Android backend.

--- a/AndroidDev/app/src/main/res/layout/sub_menu.xml
+++ b/AndroidDev/app/src/main/res/layout/sub_menu.xml
@@ -41,16 +41,16 @@
         app:layout_constraintTop_toTopOf="@+id/guideline10" />
 
     <EditText
-        android:id="@+id/email_input_editText"
+        android:id="@+id/email_input_to_editText"
         android:layout_width="260dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:autofillHints="email"
         android:ems="10"
         android:hint="Where will it go?"
-        android:autofillHints="email"
         android:inputType="textEmailAddress"
         app:layout_constraintBottom_toTopOf="@+id/guideline11"
         app:layout_constraintEnd_toStartOf="@+id/guideline8"
@@ -237,6 +237,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="Subscribe!"
+        android:onClick="subscribeMenu"
         app:layout_constraintBottom_toTopOf="@+id/guideline20"
         app:layout_constraintEnd_toStartOf="@+id/guideline8"
         app:layout_constraintStart_toStartOf="@+id/guideline7"
@@ -297,6 +298,7 @@
         android:layout_marginBottom="8dp"
         android:text="Add"
         android:textSize="18sp"
+        android:onClick="addGenre"
         app:layout_constraintBottom_toTopOf="@+id/guideline15"
         app:layout_constraintEnd_toStartOf="@+id/guideline13"
         app:layout_constraintStart_toStartOf="@+id/guideline7"
