--- a/AndroidDev/app/src/main/res/layout/main_menu.xml
+++ b/AndroidDev/app/src/main/res/layout/main_menu.xml
@@ -49,6 +49,7 @@
         app:layout_constraintGuide_percent=".98" />
 
     <ListView
+        android:id="@+id/subscribers_listView"
         android:layout_width="350dp"
         android:layout_height="500dp"
         android:layout_marginStart="8dp"
