--- a/AndroidDev/app/src/main/res/layout/sub_menu.xml
+++ b/AndroidDev/app/src/main/res/layout/sub_menu.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".sub_menu">
+    tools:context=".sub_menu"
+    android:theme="@android:style/Theme.DeviceDefault.NoActionBar"
+    android:background="#4A4A4A">
 
     <TextView
         android:id="@+id/email_input_from_text"
