Final Formatting complete

--- a/AndroidDev/app/src/main/res/layout/main_menu.xml
+++ b/AndroidDev/app/src/main/res/layout/main_menu.xml
@@ -10,16 +10,15 @@
 
     <Button
         android:id="@+id/main_screen_sub_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="60dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:onClick="onSubscribe"
         android:text="Subscribe!"
         app:layout_constraintBottom_toTopOf="@+id/guideline4"
         app:layout_constraintEnd_toEndOf="parent"
-        android:onClick="onSubscribe"
         app:layout_constraintStart_toStartOf="parent" />
 
     <android.support.constraint.Guideline
